@@ -236,13 +236,22 @@ HM_ENTITY_UNIT_REPLACE: dict[str, str] = {
 }
 
 # virtual remotes device_types
-HM_VIRTUAL_REMOTE_HM = "HM-RCV-50"
-HM_VIRTUAL_REMOTE_HMW = "HMW-RCV-50"
-HM_VIRTUAL_REMOTE_HMIP = "HmIP-RCV-50"
-HM_VIRTUAL_REMOTES = [
-    HM_VIRTUAL_REMOTE_HM,
-    HM_VIRTUAL_REMOTE_HMW,
-    HM_VIRTUAL_REMOTE_HMIP,
+HM_VIRTUAL_REMOTE_HM_TYPES = "HM-RCV-50"
+HM_VIRTUAL_REMOTE_HMW_TYPES = "HMW-RCV-50"
+HM_VIRTUAL_REMOTE_HMIP_TYPES = "HmIP-RCV-50"
+HM_VIRTUAL_REMOTE_TYPES = [
+    HM_VIRTUAL_REMOTE_HM_TYPES,
+    HM_VIRTUAL_REMOTE_HMW_TYPES,
+    HM_VIRTUAL_REMOTE_HMIP_TYPES,
+]
+
+HM_VIRTUAL_REMOTE_HM_ADDRESS = "BidCoS-RF"
+HM_VIRTUAL_REMOTE_HMW_ADDRESS = "HMW-RCV-50"  # unknown
+HM_VIRTUAL_REMOTE_HMIP_ADDRESS = "HmIP-RCV-1"
+HM_VIRTUAL_REMOTE_ADDRESSES = [
+    HM_VIRTUAL_REMOTE_HM_ADDRESS,
+    HM_VIRTUAL_REMOTE_HMW_ADDRESS,
+    HM_VIRTUAL_REMOTE_HMIP_ADDRESS,
 ]
 
 PARAMETER_FRIENDLY_NAME: dict[str, str] = {}
