@@ -1,5 +1,6 @@
 Version 1.9.0 (2022-06-09)
 - Refactor entity name creation
+- Cleanup entity selection
 
 Version 1.8.6 (2022-06-07)
  - Code cleanup
